[package]
name = "spark"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
description = "Convenience wrapper for Vulkan in Rust"
repository = "https://github.com/sjb3d/spark"
readme = "../README.md"
keywords = ["vulkan", "graphics"]
license = "MIT"
publish = false

[dependencies]
lazy_static = "1.4.0"
shared_library = "0.1.9"
