[package]
name = "vkr"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
description = "Convenience wrapper for Vulkan in Rust"
repository = "https://github.com/sjb3d/vkr"
readme = "../README.md"
keywords = ["vulkan", "graphics"]
license = "MIT"
publish = false

[dependencies]
lazy_static = "1.1.0"
shared_library = "0.1.9"
