[package]
name = "graphics-lib"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
spark = { path = "../../spark" }
spark-imgui = { path = "../../spark-imgui" }
winit = "0.25"
raw-window-handle = "0.3"
imgui = "0.8"
imgui-winit-support = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2"
