[package]
name = "graphics-lib"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
spark = { path = "../../spark" }
spark-imgui = { path = "../../spark-imgui" }
winit = "0.26.1"
raw-window-handle = "0.4.2"
imgui = "0.8.2"
imgui-winit-support = { version = "0.8.2", features = ["winit-26"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6.1"
