[package]
name = "graphics"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
vkr = { path = "../../vkr" }
vkr-imgui = { path = "../../vkr-imgui" }
winit = "0.22"
raw-window-handle = "0.3"
imgui = "0.5"
imgui-winit-support = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2"
