[package]
name = "graphics"
version = "0.2.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2021"
publish = false

[dependencies]
spark = { path = "../../spark" }
spark-egui = { path = "../../spark-egui" }
winit = "0.28"
egui = "0.23"
egui-winit = "0.23"
raw-window-handle = "0.5"
bytemuck = "1.14.0"
